changes made to localhost

--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -2,7 +2,7 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : 'Insert your appId here',
+      appId      : 1977618352488038,
       cookie     : true,
       xfbml      : true,
       version    : 'v2.8'
@@ -17,3 +17,4 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+
